Updated style to fix navbar on mobile.

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -176,7 +176,7 @@ nav div ul li a {
 
 .nav-right {
     padding: 0.5em 0.5em;
-    flex: 3;
+    flex: 4;
 }
 
 .nav-left {
